--- a/website/index.html
+++ b/website/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#skills">Umiejętności</a></li>
                 <li><a href="#contact">Kontakt</a></li>
                 <li><a href="Poradniki.html">Poradniki</a></li>
-                <li><a href="Filmy.html">Filmy</a></li>
+                <li><a href="videos.html">Filmy</a></li>
             </ul>
         </nav>
     </div>
