--- a/Poradniki.html
+++ b/Poradniki.html
@@ -36,7 +36,7 @@
                 <div class="guide-item">
                     <h3>Poradnik 1: pfSense podstawy</h3>
                     <p>Pobieranie, instalacja i konfiguracja .</p>
-                    <a href="guide1.html" class="btn">Przejdź do poradnika</a>
+                    <a href="Poradniki/Pfsense.html" class="btn">Przejdź do poradnika</a>
                 </div>
                 <!-- Poradnik 2 -->
                 <div class="guide-item">
