--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kaszotti pasja informatyki</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
 <header>
@@ -12,9 +12,6 @@
         <h1 class="logo">kaszotti</h1>
         <nav>
             <ul>
-                <li><a href="#about">O mnie</a></li>
-                <li><a href="#skills">Umiejętności</a></li>
-                <li><a href="#contact">Kontakt</a></li>
                 <li><a href="Poradniki.html">Poradniki</a></li>
                 <li><a href="videos.html">Filmy</a></li>
             </ul>
