--- a/videos.html
+++ b/videos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Moje wideo - kaszotti</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style3.css">
 </head>
 <body>
 <header>
@@ -13,9 +13,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Strona główna</a></li>
-        <li><a href="about.html">O mnie</a></li>
         <li><a href="videos.html" class="active">Wideo</a></li>
-        <li><a href="#contact">Kontakt</a></li>
       </ul>
     </nav>
   </div>
