--- a/videos.html
+++ b/videos.html
@@ -31,31 +31,21 @@
       <div class="video-grid">
         <!-- Wideo 1 -->
         <div class="video-item">
-          <h3>Projekt 1</h3>
-          <video controls>
-            <source src="videos/project1.mp4" type="video/mp4">
-            Twoja przeglądarka nie wspiera wideo.
-          </video>
+          <h3>Weird way of playing PERSONA 4 GOLDEN :3 </h3>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/sT8cm7GQSBM?si=RR5v77co7DvnuKrz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <!-- Wideo 2 -->
         <div class="video-item">
-          <h3>Projekt 2</h3>
-          <video controls>
-            <source src="videos/project2.mp4" type="video/mp4">
-            Twoja przeglądarka nie wspiera wideo.
-          </video>
+          <h3>MacBook air 2014 w 2025 roku</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bn7kaSoJZ4k?si=T1wlN54I4nRAQCpa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <!-- Wideo 3 -->
         <div class="video-item">
-          <h3>Projekt 3</h3>
-          <video controls>
-            <source src="videos/project3.mp4" type="video/mp4">
-            Twoja przeglądarka nie wspiera wideo.
-          </video>
+          <h3>Placeholder xD</h3>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/XxNAwZ-A88w?si=T4JdCV30D-tcY7fV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
     </div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/XxNAwZ-A88w?si=T4JdCV30D-tcY7fV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </section>
 </main>
 <footer>
