--- a/Poradniki/Pfsense.html
+++ b/Poradniki/Pfsense.html
@@ -27,7 +27,7 @@
     </section>
     <section id="skills" class="content-section">
         <div class="container">
-            <p>Pobieranie nowych wersji pfSense wymaga założenia konta na platformie Netgate oraz nie da się już pobrać standalone iso dla pfSsenseCE tylko trzeba pobierać combo z wersją pfSense plus.
+            <p>Pobieranie nowych wersji pfSense wymaga założenia konta na platformie Netgate oraz nie da się już pobrać standalone iso dla pfSsenseCE tylko trzeba pobierać combo z wersją pfSense plus. :3
                 Dlatego w tym poradniku pokaże z kąd pobrać oraz jak zainstalować starszą wersje pfSense , nie zalecam używać tego do faktycznych zastosowań jako router ( ogólnie personalnie o wiele bardziej polecam OpenWRT do takich zastosowań) jeśli potrzebujesz pfSense na zajęcia w szkole to jest to poradnik dla ciebie
             </p>
             <h2>Pobieranie pliku ISO pfSense z InternetArchive</h2>
