--- a/Poradniki/Pfsense.html
+++ b/Poradniki/Pfsense.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kaszotti pasja informatyki</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="fotopfsense/pfcs.css">
 </head>
 <body>
 <header>
