--- a/iza.html
+++ b/iza.html
@@ -21,8 +21,7 @@
                     <p><span class="stat-label">IMIĘ:</span> Izabela Łęcka</p>
                     <p><span class="stat-label">WIEK:</span> 25</p>
                     <p><span class="stat-label">ZNAK:</span> ♎ Waga</p>
-                    <p><span class="stat-label">BLOOD TYPE:</span> AB</p>
-                    <p><span class="stat-label">STATUS:</span> Single (i nie szukam)</p>
+                    <p><span class="stat-label">STATUS:</span> Single (Dm's Open)</p>
                 </div>
             </div>
 
